--- a/WebApplication8/appsettings.json
+++ b/WebApplication8/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=StudentPortal.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
